<resources>
    <string name="app_name">Capturalo</string>
    <string name="pick_image_intent_text">Elegir imagen</string>
    <string name="demo_min_label">min</string>
    <string name="demo_max_label">max</string>
    <string name="facebook_login">Ingresa con Facebook</string>
    <string name="user_email">Email</string>
    <string name="user_password">Contraseña</string>
    <string name="confirm_user_password">Repetir contraseña</string>
    <string name="login_forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="log_in">Ingresar</string>
    <string name="tv_register_now">Registrate ahora!</string>
    <string name="tv_not_register_yet">¿Aún no estas registrado?</string>
    <string name="welcome_to">Bienvenido</string>
    <string name="create_your_account">Crea tu cuenta</string>
    <string name="tv_user_nick_name">Usuario</string>
    <string name="cellphone">Celular</string>
    <string name="user_name">Nombre</string>
    <string name="user_last_name">Apellido</string>
    <string name="register">Regístrate</string>
    <string name="already_register">¿Ya estás registrado?</string>
    <string name="skip">Siguiente</string>
    <string name="begin">Comenzar</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sit amet nibh a sem finibus aliquet. Fusce efficitur, diam nec aliquet eleifend, velit magna commodo sem, in interdum lorem nunc ut nulla. Vivamus lobortis ipsum mi, lacinia vulputate risus malesuada et. Morbi ultrices sagittis justo. Phasellus sed aliquam velit, quis gravida orci. Etiam vestibulum rutrum orci quis hendrerit. Praesent eget velit nec ligula vestibulum volutpat. Mauris et molestie arcu. Cras ex erat, vehicula id facilisis in, suscipit sed nulla. Morbi non venenatis mauris. Nunc cursus scelerisque dui, eget sagittis libero commodo sit amet. Morbi sem enim, dignissim ut sollicitudin id, vestibulum vitae mi. In sed tempor nibh. Interdum et malesuada fames ac ante ipsum primis in faucibus.</string>
    <string name="title">Título</string>
    <!--<string name="facebook_app_id">1806606286321223</string>-->
    <string name="genre_header_first_tv">Selecciona tus géneros musicales</string>
    <string name="genre_header_second_tv">favoritos para empezar</string>
    <string name="professional_first_header">Queremos saber más de ti.</string>
    <string name="professional_second_header">¿Eres músico o aficionado?</string>
    <string name="where_you_are_first_tv">Agrega departamento, ciudad y</string>
    <string name="where_you_are_second_tv">distrito para ubicarte.</string>
    <string name="explorer_first_header">Realiza búsquedas completas por</string>
    <string name="explorer_second_header">artistas y grupos o por canciones</string>
    <string name="artist_explorer_no_artists">No hay artistas disponibles</string>
    <string name="action_settings">settings</string>
    <string name="search">Search</string>
    <string name="next">Siguiente Paso</string>
    <string name="preview">Atras</string>
    <string name="follow">Seguir</string>
    <string name="artist_group_name">Artista/Grupo</string>
    <string name="album_name">Album name</string>
    <string name="album_year">Album year</string>
    <string name="no_songs_available">No hay canciones disponibles</string>
    <string name="song_title">Song Title</string>
    <string name="reproduction">Reproduction</string>
    <string name="song_explorer">Explorar Canciones</string>
    <string name="artist_explorer">Buscar productos</string>
    <string name="songs">Canciones</string>
    <string name="start"><![CDATA[Comenzar >]]></string>
    <string name="artist_explorer_text">Explorando Artistas y Grupos</string>
    <string name="explorer_songs_tv">Explorando Canciones</string>
    <string name="artist_songs">Canciones</string>
    <string name="artist_albums">Álbumes</string>
    <string name="end_register">Finalizar</string>
    <string name="mute">MUTE</string>
    <string name="popular_songs">Productos populares</string>
    <string name="list_of_best_songs">Encuentra los mejores productos de temporada.</string>
    <string name="see_all">Ver todos</string>
    <string name="recommended_genres">Recomendados según tus busquedas</string>
    <string name="capturar">capturar</string>
    <string name="replays">reproducciones</string>
    <string name="artist_cover">Artist cover</string>
    <string name="artista_grupo">Artista/Grupo</string>
    <string name="listen">Escuchar</string>
    <string name="train">Tocar</string>
    <string name="solo">SOLO</string>
    <string name="delete_photo">ELIMINAR</string>
    <string name="gallery_take_photo">GALERÍA</string>
    <string name="camera_take_photo">CAPTURAR</string>
    <string name="info_take_photo">AYUDA</string>
    <string name="send_photo">ENVIAR</string>

    <string-array name="spinner_default_value">
        <item>Default Value</item>
    </string-array>

</resources>
