<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="81dp"
    android:background="@color/bb_darkBackgroundColor"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray" />

    <LinearLayout
        android:id="@+id/item_view"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:animateLayoutChanges="true"
        android:background="@color/transparent"
        android:orientation="horizontal"
        android:paddingEnd="20dp"
        android:paddingStart="20dp">

        <ImageView
            android:id="@+id/iv_song_album_cover"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="42dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="15dp"
                android:layout_weight="1.8"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_song_name"
                    fontPath="fonts/MaaxRoundedBold_2.otf"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="@string/song_title"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_article_name"
                    fontPath="fonts/MaaxRounded_1.otf"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="@string/artist_group_name"
                    android:textColor="@color/white" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_listen_song"
                fontPath="fonts/MaaxRoundedBold_2.otf"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_square_border_white"
                android:text="@string/listen"
                android:textAllCaps="false"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_practice_song"
                fontPath="fonts/MaaxRoundedBold_2.otf"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_square_border_primary_color"
                android:text="@string/train"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray" />

</LinearLayout>