<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#6c000000">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/rl_back_to_welcome"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="15dp"
                android:background="?attr/selectableItemBackground">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerInParent="true"
                    android:clickable="false"
                    android:src="@drawable/icon_close" />
            </RelativeLayout>
            <LinearLayout
                android:layout_marginTop="40dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="35dp"
                    android:layout_marginTop="0dp"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:src="@drawable/dan_music_logo" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="CAPTURALO"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="@dimen/size_title" />


                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:visibility="gone"
                        android:src="@drawable/jamm_me_letter" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="35dp"
                    android:layout_marginTop="15dp">

                    <Button
                        android:id="@+id/btn_facebook_login"
                        style="@style/button_jamm_facebook"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:padding="10dp"
                        android:text="@string/facebook_login" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="35dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/custom_user_login_data"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">


                        <EditText
                            android:id="@+id/et_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_marginStart="5dp"
                            android:backgroundTint="@color/transparent"
                            android:hint="@string/user_email"
                            android:inputType="textEmailAddress"
                            android:textSize="@dimen/size_normal" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/gray" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">


                        <EditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="5dp"
                            android:layout_marginStart="5dp"
                            android:backgroundTint="@color/transparent"
                            android:hint="@string/user_password"
                            android:inputType="textPassword"
                            android:textSize="@dimen/size_normal" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="35dp"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/tv_forgot_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|end"
                        android:text="@string/login_forgot_password"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="35dp"
                    android:layout_marginTop="20dp">

                    <Button
                        android:id="@+id/btn_normal_login"
                        style="@style/button_jamm"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:text="@string/log_in" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_create_user_account"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="35dp"
                    android:layout_marginTop="40dp"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="right"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/tv_not_register_yet"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_register_new_user"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:ellipsize="end"
                        android:gravity="left"
                        android:maxLines="1"
                        android:text="@string/tv_register_now"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
